--- a/src/components/Main/Main.module.css
+++ b/src/components/Main/Main.module.css
@@ -1,5 +1,6 @@
 .main {
     height:100vh;
+    min-height: 600px;
     background-color: #ff9dff;
     display: flex;
     justify-content: center;
