--- a/src/components/Contacts/Contacts.module.css
+++ b/src/components/Contacts/Contacts.module.css
@@ -1,4 +1,33 @@
-.slogan {
-height: 100vh;
+.contacts {
+    height: 100vh;
     background-color: lightgreen;
+    display: flex;
+    justify-content: center;
+    padding: 50px 0;
+    min-height: 600px;
+
 }
+
+.container {
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+    width: 80%;
+    display: flex;
+
+}
+
+.contacts h3 {
+    font-size: 40px;
+    margin: 0;
+}
+
+button {
+    width: 200px;
+    height: 50px;
+}
+
+form, input, textarea {
+    width: 600px;
+}
+
