--- a/src/components/Skills/Skills.module.css
+++ b/src/components/Skills/Skills.module.css
@@ -1,5 +1,6 @@
 .skills {
     height: 100vh;
+    min-height: 600px;
     background-color: #5cff43;
     display: flex;
     justify-content: center;
