--- a/src/components/Slogan/Slogan.module.css
+++ b/src/components/Slogan/Slogan.module.css
@@ -1,4 +1,25 @@
 .slogan {
 height: 35vh;
     background-color: aqua;
+    display: flex;
+    justify-content: center;
+    padding: 50px 0;
+}
+
+.container {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+    width: 80%;
+    height: 100%;
+}
+
+.slogan h3 {
+    font-size: 40px;
+    margin: 0;
+}
+button {
+    width: 200px;
+    height: 50px;
 }
