--- a/src/components/Contacts/Contacts.module.css
+++ b/src/components/Contacts/Contacts.module.css
@@ -1,11 +1,12 @@
 .contacts {
     height: 100vh;
+    width: 100%;
     background-color: lightgreen;
     display: flex;
     justify-content: center;
-    padding: 50px 0;
+    padding: 50px;
     min-height: 600px;
-
+    text-align: center;
 }
 
 .container {
@@ -22,12 +23,26 @@
     margin: 0;
 }
 
-button {
+.contacts button {
     width: 200px;
     height: 50px;
+    font-size: 25px;
+    font-weight: bold;
 }
 
 form, input, textarea {
-    width: 600px;
+    width: 70%;
 }
-
+@media all and (max-width: 700px) {
+    form, input, textarea {
+        width: 100%;
+    }
+    .contacts h3 {
+        font-size: 30px;
+    }
+    .contacts button {
+        width: 150px;
+        height: 40px;
+        font-size: 20px;
+    }
+}
