--- a/src/components/Projects/Project/Project.module.css
+++ b/src/components/Projects/Project/Project.module.css
@@ -1,17 +1,16 @@
 .project {
     width: 45%;
-    height: 400px;
 }
 .look {
-    height: 300px;
+    height: 280px;
     width: 100%;
     display: flex;
     justify-content: center;
     align-items: center;
 }
-button {
-    width: 30%;
-    height: 15%;
+.look button {
+    width: 150px;
+    height: 50px;
     font-size: large;
     font-weight: bold;
 }
@@ -20,9 +19,16 @@ button {
     padding-left: 10px;
     margin-bottom: 0;
 }
-p {
+.parLook {
     margin-top: 0;
     text-align: left;
     padding-left: 10px;
     padding-right: 10px;
+    overflow: auto;
+}
+
+@media all and (max-width: 700px) {
+    .project {
+        width: 100%;
+    }
 }
