--- a/src/components/Skills/Skill/Skill.module.css
+++ b/src/components/Skills/Skill/Skill.module.css
@@ -1,10 +1,12 @@
 .skill {
     width: 25%;
+    min-width: 250px;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
     align-items: center;
     height: 400px;
+
 }
 .skill img {
     width: 150px;
@@ -12,4 +14,10 @@
 
 .skill h3 {
     font-size: 30px;
+}
+
+@media all and (max-width: 700px) {
+    .skill {
+        width: 100%;
+    }
 }
