--- a/src/components/Slogan/Slogan.module.css
+++ b/src/components/Slogan/Slogan.module.css
@@ -1,9 +1,11 @@
 .slogan {
-height: 35vh;
+    width: 100%;
+    height: 35vh;
     background-color: aqua;
     display: flex;
     justify-content: center;
-    padding: 50px 0;
+    padding: 50px;
+
 }
 
 .container {
@@ -16,10 +18,25 @@ height: 35vh;
 }
 
 .slogan h3 {
-    font-size: 40px;
-    margin: 0;
+    font-size:30px;
+    margin: 10px;
+    text-align: center;
 }
-button {
+
+.slogan button {
     width: 200px;
     height: 50px;
+    font-size: 25px;
+    font-weight: bold;
+}
+
+@media all and (max-width: 700px) {
+    .slogan h3 {
+        font-size:25px;
+    }
+    .slogan button {
+        width: 150px;
+        height: 40px;
+        font-size: 20px;
+    }
 }
